--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
     implementation 'mysql:mysql-connector-java:8.0.30'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework:spring-context:5.3.10' // 사용 중인 Spring 버전에 맞게 조정
+
 }
 
 tasks.named('test') {
