--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,15 +1,39 @@
+server:
+  port: 8080
+
 spring:
+  application:
+    name: coffeeproject
+  output:
+    ansi:
+      enabled: always
 
-    datasource:
-        url: jdbc:mysql://localhost:3306/
-        username: root
-        password: lldj123414
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  datasource:
+    url: jdbc:mysql://localhost:3306/rest?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: sa
+    password: mysqlpassword
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      auto-commit: false
 
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: true
+        highlight_sql: true
+        use_sql_comments: true
+        default_batch_fetch_size: 100
+    open-in-view: false
 
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.orm.jdbc.bind: TRACE
+    org.hibernate.orm.jdbc.extract: TRACE
+    org.springframework.transaction.interceptor: TRACE
+
+springdoc:
+  default-produces-media-type: application/json;charset=UTF-8
