--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
       enabled: always
 
   datasource:
-    url: jdbc:mysql://localhost:3306/rest?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    username: sa
-    password: mysqlpassword
+    url: jdbc:mysql://localhost:3306/coffee?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: root
+    password: dmlwls12
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       auto-commit: false
