build: add assign pr reviewers git workflow

--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -9,6 +9,7 @@ on:
     branches: [ "main", "develop" ]
     types: [opened, reopened, ready_for_review, synchronize]
     paths-ignore:
+      - ".github/**"
       - "docs/**"
       - "frontend/**"
 
