--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -37,4 +37,7 @@ out/
 .vscode/
 
 ### Custom ###
-src/resources/application.yml
+src/resources/application.yml.idea/workspace.xml
+.idea/vcs.xml
+.idea
+application.yml
