--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
       enabled: always
 
   datasource:
-    url: jdbc:mysql://localhost:3306/a2
+    url: jdbc:mysql://localhost:3306/prod
     username: root
-    password: lldj123414
+    password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       auto-commit: false
