--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,13 +5,15 @@ services:
     image: mysql:8.0
     container_name: mysql-db
     restart: always
+    env_file:
+      - .env
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: rest
-      MYSQL_USER: sa
-      MYSQL_PASSWORD: mysqlpassword
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "3306:3306"
+      - "${DB_PORT}:3306"
     command: --general-log=1 --general-log-file=/etc/mysql/conf.d/general.log
     volumes:
       - db_data:/var/lib/mysql
