--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: ${SERVER_PORT:8080} # 만약 환경변수가 없으면 기본 8080 사용
 
 spring:
+  profiles:
+    active: dev
   config:
     import: optional:file:../.env[.properties]
   application:
