--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "openapi-typescript ../apiV1.json -o ./src/lib/backend/generated/schema.d.ts",
+    "codegen:watch": "nodemon --watch ../apiV1.json --exec \"npm run codegen\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "lucide-react": "^0.475.0",
+    "next": "15.1.7",
+    "openapi-fetch": "^0.13.4",
+    "pretendard": "^1.3.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "nodemon": "^3.1.9",
+    "openapi-typescript": "^7.6.1",
+    "openapi-typescript-codegen": "^0.29.0",
+    "postcss": "^8",
+    "punycode": "^2.3.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
