--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,8 +30,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
 
 	compileOnly 'org.projectlombok:lombok'
-	testCompileOnly 'org.projectlombok:lombok' // Add this for tests!
-	testAnnotationProcessor 'org.projectlombok:lombok' // Add this for tests!
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	runtimeOnly 'com.h2database:h2'
@@ -43,6 +43,9 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0' // Use the latest version available
+	testImplementation 'org.mockito:mockito-core:5.0.0' // Use the latest version available
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.0.0' // Use the latest version available
 
 }
 
