--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on:
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: ["main", "develop"]
     types: [opened, reopened, ready_for_review, synchronize]
     paths-ignore:
       - ".github/**"
@@ -18,6 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: .env setting
+        run: |
+          echo "JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}" >> .env
 
       - name: Navigate to backend directory
         run: cd backend
@@ -39,4 +43,4 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
-          files: 'backend/**/build/test-results/test/TEST-*.xml'
+          files: "backend/**/build/test-results/test/TEST-*.xml"
